# python_projects

Ai_resume_analyzer/: app.py  pyproject.toml  utils.py
Day01_todos/todos/: pyproject.toml  todos.json  todos.py
Day02_unit_converter/unit-converter/: unit_converter.py
Day03_password_generator/password_generator/: main.py  pyproject.toml
Day04_simple_api/simple-api/: main.py
Day05_money_making_machine/money-making-machine/: main.py
Day06_time_zone/time-zone/: README.md  main.py
Day07_mood_tracker/mood_tracker/: README.md  main.py  mood_log.csv  pyproject.toml
Day08_quiz_app/quiz_app/: main.py
Day09_simple_calculator/simple-calculator/: main.py
Day10_personal_library/: books_data.json
Day11_assignment4/Assignments 00 to 05/00_intro_python/01_add_two_numbers/: main.py
Day11_assignment4/Assignments 00 to 05/00_intro_python/02_agreement_bot/: main.py
Day11_assignment4/Assignments 00 to 05/00_intro_python/03_fahrenheit_to_celsius/: main.py
Day11_assignment4/Assignments 00 to 05/00_intro_python/04_how_old_are_they/: main.py
Day11_assignment4/Assignments 00 to 05/00_intro_python/05_triangle_perimeter/: main.py
Day11_assignment4/Assignments 00 to 05/00_intro_python/06_square_number/: main.py
Day11_assignment4/Assignments 00 to 05/01_expressions/01_dicesimulator/: main.py
Day11_assignment4/Assignments 00 to 05/01_expressions/02_e=mc2/: main.py
Day11_assignment4/Assignments 00 to 05/01_expressions/03_feet_to_inches/: main.py
Day12_secure_data_encryption_assignment/: README.md  main.py  packages.txt  pyproject.toml  requirements.txt
(+6 files in other folders)
